# aya-xdpdump

./: Cargo.toml  README.md  rustfmt.toml
xdpdump-rs/: Cargo.toml  build.rs
xdpdump-rs-common/: Cargo.toml
xdpdump-rs-ebpf/: Cargo.toml  build.rs
xdpdump-rs-ebpf/src/: main.rs
xdpdump-rs/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
