[package]
name = "xdpdump-rs-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
network-types = "0.0.7"

xdpdump-rs-common = { path = "../xdpdump-rs-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }


[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdpdump-rs"
path = "src/main.rs"