[package]
name = "xdpdump-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
xdpdump-rs-common = { path = "../xdpdump-rs-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "sync"] }
pcap-file-tokio = "0.1.0"

[[bin]]
name = "xdpdump-rs"
path = "src/main.rs"
